[Terry N.] remove obsolete JVM arg
git-svn-id: svn+ssh://eos.nps.edu/usr/local/svn/wcm/Viskit/trunk@2355 0de750ab-c0a9-dc11-9d74-0011435b89d6