@@ -385,7 +385,7 @@
         <copy file="${dir.diskit}/dist/lib/diskit.jar" todir="${dir.lib.ext}"/>
         <copy todir="${dir.lib.ext}">
             <fileset dir="${dir.diskit}/lib">
-                <include name="open-dis.jar"/>
+                <include name="open-dis_4.06.jar"/>
                 <include name="dis-enums.jar"/>
             </fileset>
         </copy>
@@ -581,7 +581,6 @@
               classpathref="runtime.classpath"
               fork="true">
             <arg value="${main.class}"/>
-            <jvmarg value="-XX:MaxPermSize=160m"/>
             <jvmarg value="-Xmx256m"/>
             <jvmarg value="-Djava.endorsed.dirs=${java.endorsed}"/>
         </java>
@@ -593,7 +592,6 @@
               classpathref="runtime.classpath"
               fork="true">
             <arg value="${main.class}"/>
-            <jvmarg value="-XX:MaxPermSize=160m"/>
             <jvmarg value="-Xmx256m"/>
             <jvmarg value="-Djava.endorsed.dirs=${java.endorsed}"/>
         </java>
@@ -622,7 +620,6 @@
         <java classname="${main.class}"
               classpathref="runtime.classpath"
               fork="true">
-            <jvmarg value="-XX:MaxPermSize=160m"/>
             <jvmarg value="-Xmx256m"/>
             <jvmarg value="-Djava.endorsed.dirs=${java.endorsed}"/>
         </java>
@@ -648,7 +645,6 @@
 	    <!--arg value="Your path to an assembly file to initialize Viskit ready to run"/-->
 	    <!--arg value="${basedir}/MyViskitProjects/DefaultProject/Assemblies/atfp/PortOfBaltimoreAssembly.xml"/-->
 	    <!--arg value="${basedir}/MyViskitProjects/TestFoo/Assemblies/oa3302/ServerAssembly.xml"/-->
-            <jvmarg value="-XX:MaxPermSize=160m"/>
             <jvmarg value="-Xmx256m"/>
             <!-- Font anti-aliasing -->
             <jvmarg value="-Dswing.aatext=true"/>
@@ -696,7 +692,6 @@
             <jvmarg value="-Xnoagent"/>
             <jvmarg value="-Djava.compiler=none"/>
             <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
-            <jvmarg value="-XX:MaxPermSize=160m"/>
             <jvmarg value="-Xmx256m"/>
             <!-- Font anti-aliasing -->
             <jvmarg value="-Dswing.aatext=true"/>
